--- a/pkg/virtual-clusters/l10n/en-us.yaml
+++ b/pkg/virtual-clusters/l10n/en-us.yaml
@@ -1,4 +1,5 @@
-k3k: 
+k3k:
+  group: Create a Virtual Cluster
   label: K3K
   hostCluster:
     label: Host cluster
@@ -24,7 +25,7 @@ k3k:
     placeholder: 10.42.0.0/16
   serviceCIDR:
     label: Service CIDR
-    placeholder: 10.42.0.0/16
+    placeholder: 10.43.0.0/16
     tooltip: In shared mode the service CIDR needs to be the same as the host cluster.
   clusterDNS:
     label: Cluster DNS
