--- a/pkg/virtual-clusters/l10n/en-us.yaml
+++ b/pkg/virtual-clusters/l10n/en-us.yaml
@@ -25,7 +25,7 @@ k3k:
       label: Number of Server Pods
     envVars:
       title: Server Pod Environment Variables
-      keyLabel: Env Variable
+      keyLabel: Environment Variable
     serverArgs:
       label:  Additional Server Arguments
       addLabel: Add Arg
